2011-10-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (processParams): fixed bug #3424385

2011-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkmain.c (main): fixed banking, bug 3420365
	* src/SDCCast.c: cosmetics

2011-10-25 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, Makefile.in, device/lib/z180/Makefile.in,
	  device/lib/z180/Makefile, device/lib/z80/Makefile.in,
	  device/lib/gbz80/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/Makefile.in, device/lib/ds400/Makefile.in,
	  device/lib/ds400/ds400rom.c, device/lib/mcs51/Makefile.in,
	  device/lib/r2k/Makefile.in, device/lib/hc08/Makefile.in,
	  device/non-free/lib/Makefile.in, all.vcxproj,
	  doc/sdccman.lyx, sdcc.sln. support/scripts/sdcc.nsi:
	  asranlib renamed to sdranlib
	* sdas/asranlib/*: sdas/asranlib moved to support/sdranlib

2011-10-23 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt:
	  fix config word addresses for 12f1822/3, add 16f1934/6/7 family

2011-10-21 Raphael Neider <rneider AT web.de>

	* src/pic14/device.c, src/pic14/device.h, src/pic14/ralloc.c:
	  rewrite config word handling to support locations other than
	  0x2007 and 0x2008 (16f1936 has config words at 0x8007, 0x8008)
	* device/include/pic14/pic14devices.txt:
	  replace confsiz directive with list of config word addresses

2011-10-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/string.h,
	  device/lib/_memcpy.c,
	  device/lib/_memset.c:
	  Reenable built-in memset() for z80, enable it and built-in memcpy() for z180 and r2k.

2011-10-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Makefile.common.in:
	  Handle OPT_DISABLE_GBZ80.

2011-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h:
	  Disable built-in memset until the library build problem is fixed.

2011-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/z80/gen.c,