@@ -37,6 +37,7 @@
  * routines may be reusable, will have to see.
  */
 
+#include "device.h"
 #include "gen.h"
 #include "glue.h"
 
@@ -2311,22 +2312,30 @@ static void genFunction (iCode *ic)
     pic14_inISR = 0;
     if (IFFUNC_ISISR(sym->type)) {
         pic14_inISR = 1;
-        emitpcode(POC_MOVWF,  popCopyReg(&pc_wsave));
-        emitpcode(POC_SWAPFW, popCopyReg(&pc_status));
-        /* XXX: Why? Does this assume that ssave and psave reside
-         * in a shared bank or bank0? We cannot guarantee the
-         * latter...
-         */
-        emitpcode(POC_CLRF,   popCopyReg(&pc_status));
-        emitpcode(POC_MOVWF,  popCopyReg(&pc_ssave));
-        //emitpcode(POC_MOVWF,  popGetExternal("___sdcc_saved_status",1 ));
-        emitpcode(POC_MOVFW,  popCopyReg(&pc_pclath));
-        /* during an interrupt PCLATH must be cleared before a goto or call statement */
-        emitpcode(POC_CLRF,   popCopyReg(&pc_pclath));
-        emitpcode(POC_MOVWF,  popCopyReg(&pc_psave));
-        //emitpcode(POC_MOVWF,  popGetExternal("___sdcc_saved_pclath", 1));
-        emitpcode(POC_MOVFW,  popCopyReg(&pc_fsr));
-        emitpcode(POC_MOVWF,  popGetExternal("___sdcc_saved_fsr", 1));
+        if (pic14_getPIC()->isEnhancedCore) {
+            /* 
+             * Enhanced CPUs have automatic context saving for W,
+             * STATUS, BSR, FSRx, and PCLATH in shadow registers.
+             */
+            emitpcode(POC_CLRF,   popCopyReg(&pc_pclath));
+        } else {
+            emitpcode(POC_MOVWF,  popCopyReg(&pc_wsave));
+            emitpcode(POC_SWAPFW, popCopyReg(&pc_status));
+            /* XXX: Why? Does this assume that ssave and psave reside
+             * in a shared bank or bank0? We cannot guarantee the
+             * latter...
+             */
+            emitpcode(POC_CLRF,   popCopyReg(&pc_status));
+            emitpcode(POC_MOVWF,  popCopyReg(&pc_ssave));
+            //emitpcode(POC_MOVWF,  popGetExternal("___sdcc_saved_status",1 ));
+            emitpcode(POC_MOVFW,  popCopyReg(&pc_pclath));
+            /* during an interrupt PCLATH must be cleared before a goto or call statement */
+            emitpcode(POC_CLRF,   popCopyReg(&pc_pclath));
+            emitpcode(POC_MOVWF,  popCopyReg(&pc_psave));
+            //emitpcode(POC_MOVWF,  popGetExternal("___sdcc_saved_pclath", 1));
+            emitpcode(POC_MOVFW,  popCopyReg(&pc_fsr));
+            emitpcode(POC_MOVWF,  popGetExternal("___sdcc_saved_fsr", 1));
+        } // if
 
         pBlockConvert2ISR(pb);
         pic14_hasInterrupt = 1;
@@ -2479,17 +2488,21 @@ registers :-) */
             debugFile->writeEndFunction (currFunc, ic, 1);
         }
 
-        emitpcode(POC_MOVFW,  popGetExternal("___sdcc_saved_fsr", 1));
-        emitpcode(POC_MOVWF,  popCopyReg(&pc_fsr));
-        //emitpcode(POC_MOVFW,  popGetExternal("___sdcc_saved_pclath", 1));
-        emitpcode(POC_MOVFW,  popCopyReg(&pc_psave));
-        emitpcode(POC_MOVWF,  popCopyReg(&pc_pclath));
-        emitpcode(POC_CLRF,   popCopyReg(&pc_status)); // see genFunction
-        //emitpcode(POC_SWAPFW, popGetExternal("___sdcc_saved_status", 1));
-        emitpcode(POC_SWAPFW, popCopyReg(&pc_ssave));
-        emitpcode(POC_MOVWF,  popCopyReg(&pc_status));
-        emitpcode(POC_SWAPF,  popCopyReg(&pc_wsave));
-        emitpcode(POC_SWAPFW, popCopyReg(&pc_wsave));
+        if (pic14_getPIC()->isEnhancedCore) {
+            /* Nothing to do. */
+        } else {
+            emitpcode(POC_MOVFW,  popGetExternal("___sdcc_saved_fsr", 1));
+            emitpcode(POC_MOVWF,  popCopyReg(&pc_fsr));
+            //emitpcode(POC_MOVFW,  popGetExternal("___sdcc_saved_pclath", 1));
+            emitpcode(POC_MOVFW,  popCopyReg(&pc_psave));
+            emitpcode(POC_MOVWF,  popCopyReg(&pc_pclath));
+            emitpcode(POC_CLRF,   popCopyReg(&pc_status)); // see genFunction
+            //emitpcode(POC_SWAPFW, popGetExternal("___sdcc_saved_status", 1));
+            emitpcode(POC_SWAPFW, popCopyReg(&pc_ssave));
+            emitpcode(POC_MOVWF,  popCopyReg(&pc_status));
+            emitpcode(POC_SWAPF,  popCopyReg(&pc_wsave));
+            emitpcode(POC_SWAPFW, popCopyReg(&pc_wsave));
+        } // if
         addpCode2pBlock(pb,newpCodeLabel("END_OF_INTERRUPT",-1));
         emitpcodeNULLop(POC_RETFIE);
     }
